--- a/packages/eez-studio-shared/i18n/locales/en.json
+++ b/packages/eez-studio-shared/i18n/locales/en.json
@@ -36,5 +36,32 @@
         "CheckUpdate": "Check for Updates",
         "Home": "Home",
         "GitHub": "GitHub"
+    },
+    "chart": {
+        "AxesLineSubdivision": "Axes Line subdivision:",
+        "Dynamic": "Dynamic",
+        "Fixed": "Fixed",
+        "SnapToGrid": "Snap to grid",
+        "RenderingAlgorithm": "Rendering algorithm:",
+        "Average": "Average",
+        "MinMax": "Min-max",
+        "Gradually": "Gradually",
+        "ShowAxisLabels": "Show axis labels",
+        "ShowZoomButtons": "Show zoom in/out buttons",
+        "GlobalOptions": "Global options:",
+        "EnableZoomAnimations": "Enable zoom in/out animations",
+        "BlackBackground": "Black background",
+        "ShowSampledData": "Show sampled data",
+        "Steps": "Steps",
+        "Time": "Time",
+        "XAxis": "X axis",
+        "YAxis": "Y axis",
+        "Major": "Major",
+        "By": "by",
+        "Minor": "Minor",
+        "XAxisRulersEnabled": "X axis rulers enabled",
+        "ZoomToFitXRulersTitle": "Zoom to fit both x1 and x2",
+        "EnableYaxisRulers": "Enable {{axis}} Y axis rulers",
+        "ZoomToFitYRulersTitle": "Zoom chart to fit both y1 and y2",
     }
 }
