tarnslation: zh-cn

--- a/packages/eez-studio-shared/i18n/locales/zh-CN.json
+++ b/packages/eez-studio-shared/i18n/locales/zh-CN.json
@@ -36,5 +36,46 @@
         "CheckUpdate": "检查更新",
         "Home": "主页",
         "GitHub": "GitHub"
+    },
+    "chart": {
+        "AxesLineSubdivision": "坐标轴线细分:",
+        "Dynamic": "动态",
+        "Fixed": "固定",
+        "SnapToGrid": "对齐到网格",
+        "RenderingAlgorithm": "渲染算法:",
+        "Average": "平均",
+        "MinMax": "最小-最大",
+        "Gradually": "逐渐",
+        "ShowAxisLabels": "显示坐标轴标签",
+        "ShowZoomButtons": "显示放大/缩小按钮",
+        "GlobalOptions": "全局选项:",
+        "EnableZoomAnimations": "启用放大/缩小动画",
+        "BlackBackground": "黑色背景",
+        "ShowSampledData": "显示采样数据",
+        "Steps": "阶梯",
+        "Time": "时间",
+        "XAxis": "X 轴",
+        "YAxis": "Y 轴",
+        "Major": "主",
+        "By": "每",
+        "Minor": "次",
+        "XAxisRulersEnabled": "启用 X 轴标尺",
+        "ZoomToFitXRulersTitle": "缩放以适应 x1 和 x2",
+        "EnableYaxisRulers": "启用 {{axis}} Y 轴标尺",
+        "ZoomToFitYRulersTitle": "缩放图表以适应 y1 和 y2"
+    },
+    "home": {
+        "ActiveTabTitle": "打开本地项目或从最近的列表中选择一个",
+        "Open": "打开",
+        "CreateTitle": "创建新项目",
+        "Create": "创建",
+        "ExamplesTitle": "示例项目，已准备好运行或编辑",
+        "Examples": "示例",
+        "InstrumentsTitle": "仪器管理器",
+        "Instruments": "仪器",
+        "ExtensionsTitle": "扩展管理器",
+        "Extensions": "扩展",
+        "GlobalUserSettingsTitle": "全局用户设置",
+        "GlobalUserSettings": "设置"
     }
 }
