--- a/packages/eez-studio-shared/i18n/locales/en.json
+++ b/packages/eez-studio-shared/i18n/locales/en.json
@@ -43,6 +43,7 @@
         "Fixed": "Fixed",
         "SnapToGrid": "Snap to grid",
         "RenderingAlgorithm": "Rendering algorithm:",
+        "ChartRenderingAlgorithm": "Chart rendering algorithm",
         "Average": "Average",
         "MinMax": "Min-max",
         "Gradually": "Gradually",
@@ -62,7 +63,9 @@
         "XAxisRulersEnabled": "X axis rulers enabled",
         "ZoomToFitXRulersTitle": "Zoom to fit both x1 and x2",
         "EnableYaxisRulers": "Enable {{axis}} Y axis rulers",
-        "ZoomToFitYRulersTitle": "Zoom chart to fit both y1 and y2"
+        "ZoomToFitYRulersTitle": "Zoom chart to fit both y1 and y2",
+        "ZoomIn": "Zoom in",
+        "ZoomOut": "Zoom out"
     },
     "home": {
         "ActiveTabTitle": "Open a local project or select one from the recent list",
@@ -86,7 +89,32 @@
         "SortAlphabetically": "Sort alphabetically",
         "ShowMostRecentFirst": "Show most recent first",
         "OpenProject": "Open Project",
-        "OpenProjectTitle": "Open a local EEZ Studio Project"
+        "OpenProjectTitle": "Open a local EEZ Studio Project",
+        "NewProject": "New Project",
+        "CreateProjecting": "Creating project...",
+        "ProjectSettings": "Project settings",
+        "Name": "Name",
+        "LVGLVersion": "LVGL version",
+        "CommandsProtocol": "Commands protocol",
+        "Proprietary": "Proprietary",
+        "Location": "Location",
+        "CreateDirectory": "Create directory",
+        "CloneGitRepository": "Clone git repository",
+        "CheckGit": "Check this if you want to download the\nentire repository not only eez-project\nfile and its dependencies.",
+        "InitGit": "Initialize as git repository",
+        "BB3Project": "BB3 project file option",
+        "DownloadFromGitHub": "Download from GitHub",
+        "AlreadyHaveLocal": "I already have a local copy",
+        "BB3ProjectFilePath": "BB3 project file path",
+        "NewerOr1_8": "1.8 or newer",
+        "OlderOr1_7_x": "1.7.x or older",
+        "CreateProject": "Create project",
+        "Description": "Description",
+        "FindMoreOnWeb": "Find more on the platform web site ...",
+        "EEZProject": "EEZ project",
+        "AllFiles": "All files",
+        "ProjectFilePath": "Project file path",
+        "ProjectFolderPath": "Project folder path"
     },
     "setup": {
         "InstallingExtension": "Installing Extension",
@@ -100,5 +128,105 @@
         "GenMdFile": "Generate markdown file",
         "GenHTMLFile": "Generate HTML file",
         "GenODTFile": "Generate ODT file"
+    },
+    "extension": {
+        "Button": {
+            "OK": "OK",
+            "Cancel": "Cancel"
+        },
+        "Installed": "Installed",
+        "NotInstalled": "Not installed",
+        "ConFirmMessage": "You are about to install version {{version}} of the '{{name}}' extension.",
+        "ButtonInstructions": "\nClick 'OK' to replace the installed version.\nClick 'Cancel' to stop the installation.",
+        "ExtensionInstalling": "Installing extension {{name}}@{{version}} ...",
+        "ExtensionInstalled": "Extension {{name}}@{{version}} has been installed",
+        "ExtensionInstallFail": "Failed to install extension {{name}}@{{version}} extension {{error}}",
+        "ExtensionDownloading": "Downloading {{name}} extension package ...",
+        "ExtensionDownloadingPackage": "Downloading {{name}} extension package: {{loaded}} of {{total}}.",
+        "ExtensionInstallFailHash": "Failed to install {{name}} extension because package file hash doesn't match.",
+        "ExtensionInstalledName": "Extension {{name}} installed.",
+        "ExtensionInstallFailedName": "Failed to install {{name}} extension.",
+        "ExtensionDownloadFailed": "Failed to download {{name}} extension package.",
+        "Updating": "Updating...",
+        "AreYouSure": "Are you sure?",
+        "ExtensionUninstalled": "Extension {{name}} uninstalled.",
+        "ExtensionUninstallFailed": "Failed to uninstall {{name}} extension: {{error}}.",
+        "ExtensionFiles": "Extension files",
+        "AllFiles": "All files",
+        "SaveTo": "Save to {{path}}",
+        "ImageFiles": "Image files",
+        "ChangeImage": "Change image",
+        "Versions": "Versions:",
+        "Install": "Install",
+        "InstallTitle": "Install extension",
+        "Update": "Update",
+        "UpdateTitle": "Update extension to the latest version",
+        "Replace": "Replace",
+        "ReplaceTitle": "Replace installed extension with selected version",
+        "Uninstall": "Uninstall",
+        "UninstallTitle": "Uninstall extension",
+        "Export": "Export",
+        "ExportTitle": "Export extension",
+        "Extensions": "Extensions",
+        "NotValidExtensionPackage": "This is not a valid extension package file.",
+        "NewVersionAlreadyInstalled": "The newer version {{version}} is already installed.{{button_instrucations}}",
+        "OlderVersionAlreadyInstalled": "The older version {{version}} is already installed.{{button_instrucations}}",
+        "VersionAlreadyInstalled": "That version is already installed.{{button_instrucations}}",
+        "InstallingExtensionFrom": "Installing extension from {{path} ...}",
+        "ExtensionFromInstalled": "Extension from {{path}} has been installed.",
+        "ExtensionFromInstallFailed": "Failed to install extension from {{path}}: {{error}}.",
+        "NewVersions": "New versions",
+        "UpdateAll": "Update All",
+        "Actions": "Actions",
+        "UpdateCatalog": "Update Catalog",
+        "InstallExtension": "Install Extension",
+        "InstallExtensionTitle": "Install extension from local file",
+        "NoExtensionFound": "No extension found"
+    },
+    "instrument": {
+        "InstallExtension": "Install Extension",
+        "InstallExtensionTitle": "Install extension for this instrument",
+        "OpenInTab": "Open in tab",
+        "OpenInTabTitle": "Open instrument in new tab",
+        "OpenInNewWindow": "Open in new window",
+        "OpenInNewWindowTitle": "Open instrument in new window",
+        "Delete": "Delete",
+        "DeleteTitle": "Delete instrument",
+        "ServerAddress": "Server address",
+        "ServerPort": "Port",
+        "SerialPort": "Port",
+        "BaudRate": "Baud rate",
+        "DataBits": "Data bits",
+        "StopBits": "Stop bits",
+        "Parity": "Parity",
+        "FlowControl": "Flow control",
+        "VendorID": "Vendor ID",
+        "ProductID": "Product ID",
+        "WebSimulatoKey": "Interface",
+        "WebSimulatorValue": "WebSimulator",
+        "VisaKey": "Resource",
+        "Installing": "Installing...",
+        "InstallSuccess": "Extensions successfully installed!",
+        "ExtensionNotFound": "Instrument extension not found",
+        "Instrument": "Instrument",
+        "ID": "ID",
+        "Label": "Label",
+        "IDN": "IDN",
+        "AutoConnect": "Auto connect",
+        "Connect": "Connect",
+        "Disconnect": "Disconnect",
+        "About": "About"
+    },
+    "shortcuts": {
+        "ShowIEXTShortcuts": "Show IEXT shortcuts",
+        "AddShortcut": "Add shortcut",
+        "ShowGroups": "Show groups",
+        "EditShortcut": "Edit shortcut",
+        "DeleteShortcut": "Delete shortcut",
+        "AreYouSure": "Are you sure?"
+    },
+    "project_editor": {
+        "CommitChanges": "Commit changes (ENTER)",
+        "DiscardChanges": "Discard changes (ESC)"
     }
 }
