--- a/packages/eez-studio-shared/i18n/locales/zh-CN.json
+++ b/packages/eez-studio-shared/i18n/locales/zh-CN.json
@@ -43,6 +43,7 @@
         "Fixed": "固定",
         "SnapToGrid": "对齐到网格",
         "RenderingAlgorithm": "渲染算法:",
+        "ChartRenderingAlgorithm": "图表渲染算法",
         "Average": "平均",
         "MinMax": "最小-最大",
         "Gradually": "逐渐",
@@ -62,7 +63,9 @@
         "XAxisRulersEnabled": "启用 X 轴标尺",
         "ZoomToFitXRulersTitle": "缩放以适应 x1 和 x2",
         "EnableYaxisRulers": "启用 {{axis}} Y 轴标尺",
-        "ZoomToFitYRulersTitle": "缩放图表以适应 y1 和 y2"
+        "ZoomToFitYRulersTitle": "缩放图表以适应 y1 和 y2",
+        "ZoomIN": "放大",
+        "ZoomOUT": "缩小"
     },
     "home": {
         "ActiveTabTitle": "打开本地项目或从最近的列表中选择一个",
@@ -86,7 +89,32 @@
         "SortAlphabetically": "按字母排序",
         "ShowMostRecentFirst": "最新的在前",
         "OpenProject": "打开项目",
-        "OpenProjectTitle": "打开本地 EEZ Studio 项目"
+        "OpenProjectTitle": "打开本地 EEZ Studio 项目",
+        "NewProject": "新项目",
+        "CreateProjecting": "正在创建项目...",
+        "ProjectSettings": "项目设置",
+        "Name": "名称",
+        "LVGLVersion": "LVGL 版本",
+        "CommandsProtocol": "命令协议",
+        "Proprietary": "专有",
+        "Location": "位置",
+        "CreateDirectory": "创建目录",
+        "CloneGitRepository": "克隆 Git 仓库",
+        "CheckGit": "如果您想下载整个仓库，而不仅仅是 eez-project 文件及其依赖，请勾选此项。",
+        "InitGit": "初始化为 Git 仓库",
+        "BB3Project": "BB3 项目文件选项",
+        "DownloadFromGitHub": "从 GitHub 下载",
+        "AlreadyHaveLocal": "我已有本地副本",
+        "BB3ProjectFilePath": "BB3 项目文件路径",
+        "NewerOr1_8": "1.8 或更新",
+        "OlderOr1_7_x": "1.7.x 或更旧",
+        "CreateProject": "创建项目",
+        "Description": "描述",
+        "FindMoreOnWeb": "在平台网站上了解更多内容 ...",
+        "EEZProject": "EEZ 项目",
+        "AllFiles": "所有文件",
+        "ProjectFilePath": "项目文件路径",
+        "ProjectFolderPath": "项目文件夹路径"
     },
     "setup": {
         "InstallingExtension": "正在安装扩展",
@@ -100,5 +128,105 @@
         "GenMdFile": "生成 markdown 文件",
         "GenHTMLFile": "生成 HTML 文件",
         "GenODTFile": "生成 ODT 文件"
+    },
+    "extension": {
+        "Button": {
+            "OK": "确定",
+            "Cancel": "取消"
+        },
+        "Installed": "已安装",
+        "NotInstalled": "未安装",
+        "ConFirmMessage": "您即将安装 '{{name}}' 扩展的版本 {{version}}。",
+        "ButtonInstructions": "\n点击 '确定' 替换已安装的版本。\n点击 '取消' 取消安装。",
+        "ExtensionInstalling": "正在安装扩展 {{name}}@{{version}} ...",
+        "ExtensionInstalled": "扩展 {{name}}@{{version}} 已安装",
+        "ExtensionInstallFail": "安装扩展 {{name}}@{{version}} 失败：{{error}}",
+        "ExtensionDownloading": "正在下载 {{name}} 扩展包 ...",
+        "ExtensionDownloadingPackage": "正在下载 {{name}} 扩展包：{{loaded}} / {{total}}。",
+        "ExtensionInstallFailHash": "安装 {{name}} 扩展失败，因为包文件的哈希值不匹配。",
+        "ExtensionInstalledName": "扩展 {{name}} 已安装。",
+        "ExtensionInstallFailedName": "安装扩展 {{name}} 失败。",
+        "ExtensionDownloadFailed": "下载 {{name}} 扩展包失败。",
+        "Updating": "正在更新...",
+        "AreYouSure": "您确定吗？",
+        "ExtensionUninstalled": "扩展 {{name}} 已卸载。",
+        "ExtensionUninstallFailed": "卸载扩展 {{name}} 失败：{{error}}。",
+        "ExtensionFiles": "扩展文件",
+        "AllFiles": "所有文件",
+        "SaveTo": "保存到 {{path}}",
+        "ImageFiles": "图像文件",
+        "ChangeImage": "更换图像",
+        "Versions": "版本:",
+        "Install": "安装",
+        "InstallTitle": "安装扩展",
+        "Update": "更新",
+        "UpdateTitle": "将扩展更新到最新版本",
+        "Replace": "替换",
+        "ReplaceTitle": "用所选版本替换已安装的扩展",
+        "Uninstall": "卸载",
+        "UninstallTitle": "卸载扩展",
+        "Export": "导出",
+        "ExportTitle": "导出扩展",
+        "Extensions": "扩展",
+        "NotValidExtensionPackage": "这不是一个有效的扩展包文件。",
+        "NewVersionAlreadyInstalled": "较新的版本 {{version}} 已经安装。{{button_instrucations}}",
+        "OlderVersionAlreadyInstalled": "较旧的版本 {{version}} 已经安装。{{button_instrucations}}",
+        "VersionAlreadyInstalled": "该版本已安装。{{button_instrucations}}",
+        "InstallingExtensionFrom": "正在从 {{path}} 安装扩展 ...",
+        "ExtensionFromInstalled": "来自 {{path}} 的扩展已安装。",
+        "ExtensionFromInstallFailed": "从 {{path}} 安装扩展失败：{{error}}。",
+        "NewVersions": "新版本",
+        "UpdateAll": "全部更新",
+        "Actions": "操作",
+        "UpdateCatalog": "更新目录",
+        "InstallExtension": "安装扩展",
+        "InstallExtensionTitle": "从本地文件安装扩展",
+        "NoExtensionFound": "未找到扩展"
+    },
+    "instrument": {
+        "InstallExtension": "安装扩展",
+        "InstallExtensionTitle": "为该仪器安装扩展",
+        "OpenInTab": "在标签页中打开",
+        "OpenInTabTitle": "在新标签页中打开仪器",
+        "OpenInNewWindow": "在新窗口中打开",
+        "OpenInNewWindowTitle": "在新窗口中打开仪器",
+        "Delete": "删除",
+        "DeleteTitle": "删除仪器",
+        "ServerAddress": "服务器地址",
+        "ServerPort": "服务器端口",
+        "SerialPort": "串口",
+        "BaudRate": "波特率",
+        "DataBits": "数据位",
+        "StopBits": "停止位",
+        "Parity": "校验位",
+        "FlowControl": "流控",
+        "VendorID": "厂商ID",
+        "ProductID": "产品ID",
+        "WebSimulatoKey": "接口",
+        "WebSimulatorValue": "WebSimulator",
+        "VisaKey": "资源",
+        "Installing": "正在安装...",
+        "InstallSuccess": "扩展安装成功！",
+        "ExtensionNotFound": "未找到仪器扩展",
+        "Instrument": "仪器",
+        "ID": "ID",
+        "Label": "标签",
+        "IDN": "IDN",
+        "AutoConnect": "自动连接",
+        "Connect": "连接",
+        "Disconnect": "断开连接",
+        "About": "关于"
+    },
+    "shortcuts": {
+        "ShowIEXTShortcuts": "显示 IEXT 快捷键",
+        "AddShortcut": "添加快捷键",
+        "ShowGroups": "显示分组",
+        "EditShortcut": "编辑快捷键",
+        "DeleteShortcut": "删除快捷键",
+        "AreYouSure": "您确定吗？"
+    },
+    "project_editor": {
+        "CommitChanges": "提交更改 (ENTER)",
+        "DiscardChanges": "放弃更改 (ESC)"
     }
 }
